--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pri-migrate-1-to-2",
+  "name": "pri-migrate-one-to-two",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -21,7 +21,7 @@
   "author": "",
   "license": "ISC",
   "bin": {
-    "pri-migrate-1-to-2": "built/index.js"
+    "pri-migrate-one-to-two": "built/index.js"
   },
   "bugs": {
     "url": "https://github.com/prijs/pri-migrate-1-to-2/issues"
@@ -32,7 +32,7 @@
   },
   "pri": {
     "type": "component",
-    "version": "2.0.17"
+    "version": "2.0.18"
   },
   "types": "src/index.tsx",
   "dependencies": {
